--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  http: ^0.12.2
+  retry: ^3.0.1
+  image_picker: ^0.6.7+4
+  shared_preferences: ^0.5.12
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: ^0.12.2
-  retry: ^3.0.1
-  image_picker: ^0.6.7+4
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
