--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   image_picker: ^0.6.7+4
   shared_preferences: ^0.5.12
   intl: ^0.16.1
+  page_transition: ^1.1.7+2
+  progress_dialog: ^1.2.4
+  email_validator: ^1.0.6
 
 dev_dependencies:
   flutter_test:
