--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.2
   retry: ^3.0.1
   image_picker: ^0.6.7+4
+  image_cropper: ^1.3.1
   shared_preferences: ^0.5.12
   intl: ^0.16.1
   page_transition: ^1.1.7+2
