--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   page_transition: ^1.1.7+2
   progress_dialog: ^1.2.4
   email_validator: ^1.0.6
+  encrypt: ^4.0.0
 
 dev_dependencies:
   flutter_test:
