--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   progress_dialog: ^1.2.4
   email_validator: ^1.0.6
   encrypt: ^4.0.0
+  fluttertoast: ^7.1.1
 
 dev_dependencies:
   flutter_test:
