--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   email_validator: ^1.0.6
   encrypt: ^4.0.0
   fluttertoast: ^7.1.1
+  agora_rtc_engine: ^3.1.3
+  permission_handler: ^5.0.1+1
 
 dev_dependencies:
   flutter_test:
