--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   email_validator: ^1.0.6
   encrypt: ^4.0.0
   fluttertoast: ^7.1.1
+  firebase_messaging: ^7.0.3
 
 dev_dependencies:
   flutter_test:
