--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   encrypt: ^4.0.0
   fluttertoast: ^7.1.1
   firebase_messaging: ^7.0.3
+  google_sign_in: ^4.5.6
 
 dev_dependencies:
   flutter_test:
