--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   fluttertoast: ^7.1.1
   firebase_messaging: ^7.0.3
   google_sign_in: ^4.5.6
+  photo_view: 0.10.0
+  get_mac: ^0.0.1
+  file_picker: ^2.0.12
 
 dev_dependencies:
   flutter_test:
