--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   photo_view: 0.10.0
   get_mac: ^0.0.1
   file_picker: ^2.0.12
+  flick_video_player: ^0.1.1
+  video_player: ^0.10.8+1
 
 dev_dependencies:
   flutter_test:
