--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   video_player: ^0.10.8+1
   dio: ^3.0.10
   cached_network_image: ^2.3.3
+  #downloads_path_provider: ^0.1.0
+  #flutter_downloader: ^1.5.2
 
 dev_dependencies:
   flutter_test:
