--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,13 +43,18 @@ dependencies:
   video_player: ^0.10.8+1
   dio: ^3.0.10
   cached_network_image: ^2.3.3
-  #downloads_path_provider: ^0.1.0
   path_provider: ^1.6.24
   flutter_downloader: ^1.5.2
+  flutter_launcher_icons: ^0.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: "assets/icon.png"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,6 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+  - assets/icon.png
   - assets/logo.png
   - assets/google.jpg
   - assets/account_circle_grey.png
