--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   path_provider: ^1.6.24
   flutter_downloader: ^1.5.2
   flutter_launcher_icons: ^0.8.0
+  sticky_grouped_list: ^1.3.0
+  flutter_audio_recorder: 0.5.2
+  audioplayers:
 
 dev_dependencies:
   flutter_test:
