--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,8 @@ dependencies:
   flutter_downloader: ^1.5.2
   flutter_launcher_icons: ^0.8.0
   sticky_grouped_list: ^1.3.0
-  flutter_audio_recorder: 0.5.2
-  audioplayers:
+  flutter_audio_recorder: ^0.5.2
+  audioplayers: ^0.17.2
 
 dev_dependencies:
   flutter_test:
